--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/boot.js"></script>
         <script type="text/javascript" src="js/load.js"></script>
         <script type="text/javascript" src="js/menu.js"></script>
+        <script type="text/javascript" src="js/bullet.js"></script>
         <script type="text/javascript" src="js/play.js"></script>
         <script type="text/javascript" src="js/game.js"></script>
     </head>
