--- a/index.html
+++ b/index.html
@@ -3,26 +3,32 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>MYXYLYX</title>
-        <style type = "text/css">
-            @import url(http://fonts.googleapis.com/css?family=Geo);
-            .hiddenText {
-                font-family: Geo;
-                visibility: hidden;
-            }
+        <title>M Y X Y L Y X</title>
+        <style>
+        body {
+          margin: 0 0 0 0;
+          background: #2E8B57;
+        }
         </style>
-        <script type="text/javascript" src="js/phaser.min.js"></script>
-        <script type="text/javascript" src="js/boot.js"></script>
-        <script type="text/javascript" src="js/load.js"></script>
-        <script type="text/javascript" src="js/menu.js"></script>
-        <script type="text/javascript" src="js/bullet.js"></script>
-        <script type="text/javascript" src="js/play.js"></script>
-        <script type="text/javascript" src="js/game.js"></script>
+
+        <script src="js/phaser-arcade-physics.min.js"></script>
+        <script src="js/boot.js"></script>
+        <script src="js/preloader.js"></script>
+        <script src="js/menu.js"></script>
+        <script src="js/game.js"></script>
+        <script src="js/app.js"></script>
+
+<!--      <script type="text/javascript" src="js/phaser.min.js"></script>
+         <script type="text/javascript" src="js/boot.js"></script>
+         <script type="text/javascript" src="js/load.js"></script>
+         <script type="text/javascript" src="js/menu.js"></script>
+         <script type="text/javascript" src="js/bullet.js"></script>
+         <script type="text/javascript" src="js/play.js"></script>
+         <script type="text/javascript" src="js/game.js"></script> -->
     </head>
 
     <body>
       <p>M Y X Y L Y X in development...</p>
-      <div id="gameDiv"> </div>
-      <p class="hiddenText">.</p>
+      <div id="gameContainer"></div>
     </body>
 </html>
